Fixing menu z-index

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -4,7 +4,7 @@ menu {
     top: 2%;
     right: 0;
     width: fit-content;
-    z-index: 10;
+    z-index: 200;
 }
 
 menu .item {
